@@ -1297,6 +1297,30 @@ sub nth_powerful {
   $lo;
 }
 
+sub perfect_power_count {
+  my($n) = @_;
+  _validate_positive_integer($n);
+  return $n if $n <= 1;
+  my @T = (1);
+
+  my $log2n = Math::Prime::Util::logint($n,2);
+  for my $k (2 .. $log2n) {
+    my $m = Math::Prime::Util::moebius($k);
+    next unless $m != 0;
+    push @T, Math::Prime::Util::mulint($m, Math::Prime::Util::subint(Math::Prime::Util::rootint($n,$_),1));
+  }
+  Math::Prime::Util::vecsum(@T);
+}
+
+sub prime_power_count {
+  my($n) = @_;
+  _validate_positive_integer($n);
+  return 0 if $n == 0;
+  return $n-1 if $n <= 5;
+
+  my $log2n = Math::Prime::Util::logint($n,2);
+  Math::Prime::Util::vecsum(map { Math::Prime::Util::prime_count(Math::Prime::Util::rootint($n, $_)) } 1..$log2n);
+}
 
 sub almost_primes {
   my($k, $low, $high) = @_;
