@@ -24,4 +24,6 @@ extern int sum_primes128(UV n, UV *hisum, UV *losum);
 /* Used for Ramanujan prime bounds */
 extern double ramanujan_axler(long double n, long double c, long double d);
 
+extern UV prime_power_count(UV n);
+
 #endif
