@@ -36,6 +36,8 @@ Revision history for Perl module Math::Prime::Util
     - is_powerful(n[,k])              is n a k-powerful number (default k=2)
     - powerful_count(n[,k])           Count of k-powerful numbers <= n
     - nth_powerful(n[,k])             The nth k-powerful number (default k=2)
+    - perfect_power_count(n)          Count of perfect powers <= n
+    - prime_power_count(n)            Count of prime powers <= n
     - qnr(n)                          Least quadratic non-residue
 
     [FIXES]
